[gd_scene load_steps=15 format=2]

[ext_resource path="res://title.gd" type="Script" id=1]
[ext_resource path="res://assts/title.png" type="Texture" id=2]
[ext_resource path="res://manu/newgame2.tscn" type="PackedScene" id=3]
[ext_resource path="res://manu/continue3.tscn" type="PackedScene" id=4]
[ext_resource path="res://manu/options5.tscn" type="PackedScene" id=5]
[ext_resource path="res://manu/Quit4.tscn" type="PackedScene" id=6]
[ext_resource path="res://assts/menu_paly.png" type="Texture" id=7]
[ext_resource path="res://assts/menu_options.png" type="Texture" id=8]
[ext_resource path="res://assts/menu_quit.png" type="Texture" id=9]
[ext_resource path="res://assts/fontes/OpenSans-ExtraBold.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://FadeIn.tscn" type="PackedScene" id=11]
[ext_resource path="res://audio/Twilight-Force-Enchanted-Dragon-Of-Wisdom.wav" type="AudioStream" id=12]
[ext_resource path="res://assts/dragon-attacking-the-warrior.jpg" type="Texture" id=13]

[sub_resource type="DynamicFont" id=1]
size = 14
use_mipmaps = true
use_filter = true
font_data = ExtResource( 10 )

[node name="title" type="Control"]
modulate = Color( 0.972549, 0.886275, 0.886275, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 97.8179
margin_top = -1.32119
margin_right = 997.818
margin_bottom = 641.679
rect_scale = Vector2( 1.14335, 0.970019 )

[node name="logo" type="TextureRect" parent="Menu"]
margin_right = 900.0
margin_bottom = 110.0
texture = ExtResource( 2 )

[node name="CenterrRow" type="HBoxContainer" parent="Menu"]
margin_top = 114.0
margin_right = 900.0
margin_bottom = 596.0
rect_pivot_offset = Vector2( 2171.13, 1171.46 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="buttons" type="VBoxContainer" parent="Menu/CenterrRow"]
margin_right = 448.0
margin_bottom = 482.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 35
alignment = 1

[node name="newgame2" parent="Menu/CenterrRow/buttons" instance=ExtResource( 3 )]
margin_right = 448.0
margin_bottom = 20.0
scene_to_load = "Null"

[node name="continue3" parent="Menu/CenterrRow/buttons" instance=ExtResource( 4 )]
margin_top = 55.0
margin_right = 448.0
margin_bottom = 75.0

[node name="options5" parent="Menu/CenterrRow/buttons" instance=ExtResource( 5 )]
margin_top = 110.0
margin_right = 448.0
margin_bottom = 130.0
scene_to_load = "Null"

[node name="Quit4" parent="Menu/CenterrRow/buttons" instance=ExtResource( 6 )]
margin_top = 165.0
margin_right = 448.0
margin_bottom = 185.0
scene_to_load = "Null"

[node name="paly_mobile" type="TextureButton" parent="Menu/CenterrRow/buttons"]
margin_top = 220.0
margin_right = 448.0
margin_bottom = 284.0
texture_normal = ExtResource( 7 )

[node name="paly_mobile2" type="TextureButton" parent="Menu/CenterrRow/buttons"]
margin_top = 319.0
margin_right = 448.0
margin_bottom = 383.0
texture_normal = ExtResource( 8 )

[node name="paly_mobile3" type="TextureButton" parent="Menu/CenterrRow/buttons"]
margin_top = 418.0
margin_right = 448.0
margin_bottom = 482.0
texture_normal = ExtResource( 9 )

[node name="CenterContainer" type="CenterContainer" parent="Menu/CenterrRow"]
editor/display_folded = true
margin_left = 452.0
margin_right = 900.0
margin_bottom = 482.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="characters" type="TextureRect" parent="Menu/CenterrRow/CenterContainer"]
margin_left = 224.0
margin_top = 241.0
margin_right = 224.0
margin_bottom = 241.0

[node name="visionlabel" type="Label" parent="Menu"]
margin_top = 600.0
margin_right = 900.0
margin_bottom = 643.0
custom_fonts/font = SubResource( 1 )
text = "Version 1.0
Rayner Tech Software"
align = 2
valign = 2
uppercase = true

[node name="FadeIn" parent="." instance=ExtResource( 11 )]
visible = false

[node name="forceDragon" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
autoplay = true

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.431373 )
light_mask = 16384
margin_left = 165.179
margin_top = -2.94647
margin_right = 2725.18
margin_bottom = 1437.05
rect_scale = Vector2( 0.378856, 0.444603 )
texture = ExtResource( 13 )
stretch_mode = 2
[connection signal="pressed" from="Menu/CenterrRow/buttons/newgame2" to="." method="_on_newgame2_pressed"]
[connection signal="pressed" from="Menu/CenterrRow/buttons/Quit4" to="." method="_on_Quit4_pressed"]
[connection signal="pressed" from="Menu/CenterrRow/buttons/paly_mobile" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="Menu/CenterrRow/buttons/paly_mobile2" to="." method="_on_paly_mobile2_pressed"]
[connection signal="pressed" from="Menu/CenterrRow/buttons/paly_mobile3" to="." method="_on_paly_mobile3_pressed"]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
